syntax = "proto3";
package Papan;

message OptionValues {
  repeated string value = 1;
}

message GameType {
  // Game type IDs should be unique across the lifetime of a server
  string game_type_id = 1;
  string name = 2;
  string version = 3;
  uint32 players_min = 4;
  uint32 players_max = 5;
  /* When a player joins a game lobby, the app should download the assets from
     the server, and note the server address for connecting when the game
     starts */
  string server_address = 6;
  map<string, OptionValues> available_exclusive_options = 7;
  map<string, OptionValues> available_group_options = 8;
}

message Players {
  uint32 min = 1;
  uint32 max = 2;
}

message Team {
  string name = 1;
  uint32 card_min = 2;
  uint32 card_max = 3;
  Players players = 4;
}

message GameJson {
  string name = 1;
  string main = 2;
  string webcomponent = 3;
  string banner = 4;
  string icon = 5;
  Players players = 6;
  repeated Team teams = 7;
  bool has_private_view = 8;
}

message Torrent {
  string infoHash = 1;
  string magnetURI = 2;
  bytes torrentFile = 3;
}

message GameInfo {
  string id = 1;
  string fullPath = 2;
  GameJson json = 3;
  Torrent torrent = 4;
}
